# foodbase

./: .gitignore  LICENSE  README.md  vercel.json
backend/: .env.example  Makefile  README.md  main.py  pyproject.toml
backend/data/: greek-market-suppliers.seed.json
backend/data/pilots/: olive-oil-pilot.intake.json
backend/data/scrapes/: greek-food-sources.combined.json  greekexporters.json  kompass.json  madeingreece.json
backend/db/: schema.sql
backend/docs/: api-surface.md  greek-market-supplier-shortlist.md  keychain-model.md  producer-intake-questionnaire.md  sector-priority-map.md  source-ingestion-status.md  source-priority-map.md
backend/schemas/: producer-intake.schema.json
backend/src/foodbase/: __init__.py  config.py  main.py
backend/src/foodbase/ai/: models.py  service.py
backend/src/foodbase/api/: __init__.py  router.py
backend/src/foodbase/api/routes/: ai.py  health.py  organizations.py  reference_data.py
backend/src/foodbase/catalog/: __init__.py  models.py  service.py
backend/src/foodbase/db/: __init__.py  bootstrap.py  health.py  reference_data.py  session.py
backend/src/foodbase/intake/: __init__.py  importer.py  models.py  olive_oil_pilot.py
backend/src/foodbase/scrapers/: __init__.py  combine.py  greekexporters.py  kompass.py  madeingreece.py  models.py  run.py  utils.py
backend/tests/: conftest.py  test_ai_api.py  test_ai_service.py  test_catalog_api.py  test_config.py  test_health.py  test_intake_importer.py  test_olive_oil_pilot.py  test_scraper_utils.py
frontend/: README.md  index.html  package-lock.json  (+2 more)
(+26 files in other folders)
